fix box alignment

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -546,6 +546,8 @@ nav > ul li a {
 	display: flex;
 	flex-direction: column;
 	min-width: 0;
+	margin-left: 8px;
+	margin-top: 18px;
 	
 	> h3 {
 		font-size: 2.2rem;
@@ -554,7 +556,7 @@ nav > ul li a {
 		color: $feature-title-color;
 		margin-top: 0;
 		line-height: 1.3;
-		margin-left: 20px;
+		margin-left: 0;
 	}
 	
 	> p {
@@ -585,11 +587,13 @@ nav > ul li a {
 	
 	.featureText {
 		min-width: 0;
+		margin-left: 4px;
+		margin-top: 12px;
 		
 		> h3 {
 			font-size: 2rem;
 			margin-bottom: 0.4rem;
-			margin-left: 16px;
+			margin-left: 0;
 		}
 		
 		> p {
